2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	  - Having fun with autotools.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (fludownloader_new_task):
	* lib/fludownloader.h:
	  - Support for range requests. Update example.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	* configure.ac:
	  - Deploy pc and header files.

2013-02-18  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	  - Add a couple more downloads to the example, for added stress.

2013-02-18  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_thread_function):
	  - Fix select() call.

2013-02-18  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	* lib/fludownloader.c: (_remove_task), (_thread_function),
	(fludownloader_destroy), (fludownloader_new_task),
	(fludownloader_abort_task), (fludownloader_abort_all_tasks):
	* lib/fludownloader.h:
	  - Add abort_all_tasks method
	  - Comments

2013-02-15  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (done_cb), (main):
	* lib/fludownloader.c: (fludownloader_new),
	(fludownloader_new_task):
	* lib/fludownloader.h:
	  - gst-indent

2013-02-15  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* examples/multidl.c: (data_cb), (done_cb), (main):
	* lib/fludownloader.c: (_write_function), (_remove_task),
	(_process_curl_messages), (_thread_function), (fludownloader_init),
	(fludownloader_shutdown), (fludownloader_new),
	(fludownloader_destroy), (fludownloader_new_task),
	(fludownloader_abort_task):
	* lib/fludownloader.h:
	  - First working version of the library and example file.